[gd_scene load_steps=11 format=3 uid="uid://c2k3pdrvbry3i"]

[ext_resource type="Texture2D" uid="uid://cketskybfrh6x" path="res://Npcs/Textures/buschi.png" id="1"]
[ext_resource type="Texture2D" uid="uid://dnx285y0tpf0k" path="res://Npcs/Textures/busch.png" id="2"]
[ext_resource type="Script" uid="uid://dbw7086lgiilg" path="res://Scripts/buschi.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://dgiu74lu48xaf" path="res://NormalMap/buschi_normal.png" id="3_3bnww"]
[ext_resource type="PackedScene" uid="uid://c0vsw377uwxkh" path="res://Scenes/ping.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://4krdafgnix1t" path="res://Scenes/npc_area_component.tscn" id="5_nrcdm"]
[ext_resource type="PackedScene" uid="uid://bcqh6xyc513hf" path="res://Scenes/dialogue_loader_component.tscn" id="6_nhcy5"]

[sub_resource type="CanvasTexture" id="CanvasTexture_sgen2"]
diffuse_texture = ExtResource("1")
normal_texture = ExtResource("3_3bnww")

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hwp8x"]
size = Vector2(38, 34)

[node name="Buschie" type="Node2D" node_paths=PackedStringArray("npcArea", "dialogLoader")]
script = ExtResource("3")
npcArea = NodePath("NPCArea")
dialogLoader = NodePath("DialogueLoader")

[node name="BuschieFace" type="Sprite2D" parent="."]
position = Vector2(0, -5)
texture = SubResource("CanvasTexture_sgen2")

[node name="Busch" type="Sprite2D" parent="."]
position = Vector2(0, -15)
texture = ExtResource("2")

[node name="Ping" parent="." instance=ExtResource("4")]
position = Vector2(0, -56)

[node name="Quit_area" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Quit_area"]
position = Vector2(0, -32)
shape = SubResource("3")

[node name="NPCArea" parent="." node_paths=PackedStringArray("ping") instance=ExtResource("5_nrcdm")]
visible = false
ping = NodePath("../Ping")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPCArea"]
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_hwp8x")

[node name="DialogueLoader" parent="." instance=ExtResource("6_nhcy5")]
visible = false
npc = "buschi"
options = true

[connection signal="body_entered" from="Quit_area" to="." method="_on_Quit_area_body_entered"]
[connection signal="body_exited" from="Quit_area" to="." method="_on_Quit_area_body_exited"]
